--- a/go/app.json
+++ b/go/app.json
@@ -2,11 +2,7 @@
   "pages":[   
     "pages/index/index",  
     "pages/logs/logs",
-    "pages/home/home",
-    "pages/embor/inject",
-    "pages/hair/inject",
     "pages/inject/inject",
-    "pages/secret/inject",
 
     "cosmetology/index/index",
     "cosmetology/logs/logs",
@@ -31,21 +27,19 @@
     {
     "pagePath":"pages/index/index",
     "text":"神美首页",
-    "iconPath":"img/z1.png"
-  },
-  {
+    "iconPath":"/img/v1.png"
+  },{
     "pagePath":"cosmetology/index/index",
     "text":"项目",
-    "iconPath": "img/z2.png"
+    "iconPath": "/img/v2.png"
   },{
     "pagePath":"platform/index/index",
     "text":"预约",
-    "iconPath": "img/z3.png"
+    "iconPath": "/img/v3.png"
   },{
     "pagePath":"l/index/index",
     "text":"关于神美",
-    "iconPath": "img/z4.png"
-  }
-  ]
+    "iconPath": "/img/v4.png"
+  }]
 }
 }
